# TextQuery-Engin

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: query.cpp  query.h  query_result.cpp  query_result.h
src/core/queries/: binary_query.cpp  binary_query.h  query_base.cpp  query_base.h  text_view.cpp  text_view.h
src/core/queries/binary/: and_query.cpp  and_query.h  or_query.cpp  or_query.h
src/core/queries/unary/: not_query.cpp  not_query.h  word_query.cpp  word_query.h
